# deep-thinking-design

./: .gitignore  pyproject.toml  test_model.py  train_model.py
config/: test_model_config.yaml  train_model_config.yaml
config/problem/: mazes.yaml
config/problem/hyp/: mazes_default.yaml
deepthinking/models/: dt_net_2d.py
deepthinking/utils/: mazes_data.py  testing.py  tools.py  training.py
