[project]
name = "deep-thinking-design"
version = "0.1.0"
description = ""
authors = [
    {name = "gdiaz95",email = "g.diaz119510@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
]

[tool.poetry]
name = "deep-thinking-design"
version = "0.1.0"
description = ""
authors = ["gdiaz95 <g.diaz119510@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
chess = "1.6.1"
comet-ml = "3.13.2"
easy-to-hard-data = "1.0.0"
einops = "0.3.2"
hydra-core = "1.1.1"
icecream = "2.1.3"
matplotlib = "3.5.3"
numpy = "^1.22.0"
omegaconf = "2.1.2"
pandas = "1.3.5"
pillow = "10.0.0"
scipy = "1.10.1"
seaborn = "0.11.2"
svglib = "1.1.0"
tensorboard = "^2.10.0"
tensorboard-plugin-wit = "*"
torch = "1.7.1"
torchvision = "0.8.2"
tqdm = "4.62.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
